--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Projeto \"Restaurant Page\" desenvolvido para o Treinamento \"The Odin Project\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
